objects/Sprint_Future_Tasks__c.object
<CustomObject>
    <fields>
        <fullName>AccountID__c</fullName>
        <label>AccountID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sprint_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint ID</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Sprint Future Tasks</relationshipLabel>
        <relationshipName>Sprint_Future_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprint_Master_Name__c</fullName>
        <label>Sprint Master Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Subject__c</fullName>
        <label>Task Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sprint Future Task</label>
    <nameField>
        <displayFormat>SFT-{00000000}</displayFormat>
        <label>Sprint Future Tasks Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sprint Future Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>